--- a/SocialNetwork/SocialNetwork/styles/wall-style.css
+++ b/SocialNetwork/SocialNetwork/styles/wall-style.css
@@ -267,6 +267,34 @@
                             cursor: pointer;
                         }
 
+.add-comment {
+    float: right;
+    border: 1px solid black;
+    border-radius: 10px;
+    padding: 10px;
+    margin-bottom: 15px;
+}
+
+    .add-comment textarea {
+        border: 1px solid black;
+        width: 100%;
+        height: 100px;
+        padding: 5px 10px;
+        font-size: 0.8em;
+    }
+
+    .add-comment input[type=button] {
+        color: white;
+        font-weight: bold;
+        font-size: 0.8em;
+        padding: 0 5px;
+        margin: 0;
+        border: 1px solid #41719c;
+        background-color: #5b9bd5;
+        float: right;
+        clear: both;
+    }
+
 @media (max-width: 600px) {
     .user-bg-image {
         height: 280px;
