--- a/SocialNetwork/SocialNetwork/views/user-profile.html
+++ b/SocialNetwork/SocialNetwork/views/user-profile.html
@@ -23,18 +23,18 @@
                 <div class="post">
                     <div class="post-user-data">
                         <div ng-if="post.author.profileImageData != null" class="post-user-image">
-                            <img ng-src="{{ post.author.profileImageData }}" />
+                            <img ng-src="{{ post.author.profileImageData }}"/>
                         </div>
                         <div ng-if="post.author.profileImageData == null" class="post-user-image">
-                            <img src="../images/no-image.png" />
+                            <img src="../images/no-image.png"/>
                         </div>
                         <div class="post-info">
                             <p class="post-author-name">{{ post.author.name }}</p>
                             <p class="post-date">{{ post.date | date : 'd MMM yyyy HH:mm:ss' : '+03' }}</p>
-                            <input ng-click="$parent.deleteMode=true" class="edit-delete-post" ng-if="(post.author.username == me.username || post.wallOwner.username == me.username) && !deleteMode && !editMode" type="button" value="Delete" />
-                            <input ng-click="$parent.editMode=true; $parent.postText=post.postContent" class="edit-delete-post" ng-if="post.author.username == me.username && !deleteMode && !editMode" type="button" value="Edit" />
-                            <input disabled="disabled" class="edit-delete-post" ng-if="(post.author.username == me.username || post.wallOwner.username == me.username) && (deleteMode || editMode)" type="button" value="Delete" />
-                            <input disabled="disabled" class="edit-delete-post" ng-if="post.author.username == me.username && (deleteMode || editMode)" type="button" value="Edit" />
+                            <input ng-click="$parent.deleteMode=true" class="edit-delete-post" ng-if="(post.author.username == me.username || post.wallOwner.username == me.username) && !deleteMode && !editMode" type="button" value="Delete"/>
+                            <input ng-click="$parent.editMode=true; $parent.postText=post.postContent" class="edit-delete-post" ng-if="post.author.username == me.username && !deleteMode && !editMode" type="button" value="Edit"/>
+                            <input disabled="disabled" class="edit-delete-post" ng-if="(post.author.username == me.username || post.wallOwner.username == me.username) && (deleteMode || editMode)" type="button" value="Delete"/>
+                            <input disabled="disabled" class="edit-delete-post" ng-if="post.author.username == me.username && (deleteMode || editMode)" type="button" value="Edit"/>
                         </div>
                     </div>
                     <div class="post-content">
@@ -51,8 +51,8 @@
                             <textarea ng-model="postText"></textarea>
                             <div class="question">
                                 <span>Save Changes?</span>
-                                <input ng-click="editPost(post, postText); editMode=false" type="button" value="Yes" />
-                                <input ng-click="editMode=false" type="button" value="No" />
+                                <input ng-click="editPost(post, postText); editMode=false" type="button" value="Yes"/>
+                                <input ng-click="editMode=false" type="button" value="No"/>
                             </div>
                         </div>
                     </div>
@@ -70,6 +70,10 @@
                             <span ng-click="$parent.show ? $parent.show=!$parent.show : $parent.show=true" class="comment">Comment</span>
                         </div>
                     </div>
+                </div>
+                <div ng-show="show" class="col-xs-10 add-comment">
+                    <textarea placeholder="Comment..." ng-model="commentText"></textarea>
+                    <input ng-click="addCommentToPost(post, commentText); show=!show; commentText=''" type="button" value="Comment" />
                 </div>
             </li>
         </ul>
