--- a/SocialNetwork/SocialNetwork/views/user-profile.html
+++ b/SocialNetwork/SocialNetwork/views/user-profile.html
@@ -101,8 +101,16 @@
                                         <textarea disabled placeholder="{{ comment.commentContent }}"></textarea>
                                         <div class="question">
                                             <span>Delete Comment?</span>
-                                            <input ng-click="deleteComment(post, comment)" type="button" value="Yes" />
-                                            <input ng-click="commentDeleteMode=false" type="button" value="No" />
+                                            <input ng-click="deleteComment(post, comment)" type="button" value="Yes"/>
+                                            <input ng-click="commentDeleteMode=false" type="button" value="No"/>
+                                        </div>
+                                    </div>
+                                    <div ng-show="commentEditMode" class="col-xs-12 edit-comment">
+                                        <textarea ng-model="commentText"></textarea>
+                                        <div class="question">
+                                            <span>Save Changes?</span>
+                                            <input ng-click="editComment(post, comment, commentText); commentEditMode=false" type="button" value="Yes" />
+                                            <input ng-click="commentEditMode=false" type="button" value="No" />
                                         </div>
                                     </div>
                                 </div>
