--- a/SocialNetwork/SocialNetwork/styles/wall-style.css
+++ b/SocialNetwork/SocialNetwork/styles/wall-style.css
@@ -444,6 +444,54 @@
         background-color: #5b9bd5;
     }
 
+.user-hover-post {
+    padding: 10px;
+    border: 1px solid black;
+    position: absolute;
+    top: 43px;
+    left: 126px;
+    z-index: 2;
+    background-color: white;
+    width: 310px;
+}
+
+    .user-hover-post .user-post-image {
+        width: 75px;
+        height: 75px;
+        display: inline-block;
+        vertical-align: top;
+    }
+
+    .user-hover-post .user-post-info {
+        display: inline-block
+    }
+
+        .user-hover-post .user-post-info .user-post-name-gender {
+            width: 200px;
+        }
+
+            .user-hover-post .user-post-info .user-post-name-gender span {
+                display: inline-block;
+                font-weight: bold;
+                font-size: 0.8em;
+                color: black;
+            }
+
+            .user-hover-post .user-post-info .user-post-name-gender img {
+                display: inline-block;
+                width: 40px;
+                height: 40px;
+            }
+
+        .user-hover-post .user-post-info .user-post-friend-button input[type=button]{
+            width: 100px;
+            padding: 0;
+            color: black;
+            border: 1px solid black;
+            font-size: 0.8em;
+            background-color: #9dc3e6;
+        }
+
 @media (max-width: 600px) {
     .user-bg-image {
         height: 280px;
