--- a/SocialNetwork/SocialNetwork/views/user-profile.html
+++ b/SocialNetwork/SocialNetwork/views/user-profile.html
@@ -127,7 +127,7 @@
                                             <img ng-if="comment.author.gender == 0" src="../images/other-icon.png" />
                                         </div>
                                         <div class="user-comment-friend-button">
-                                            <input type="button" ng-click="sendFriendRequest(comment.author.username); comment.author.hasPendingRequest=true" value="Invite" ng-if="comment.author.isFriend==false && comment.author.hasPendingRequest==false" />
+                                            <input type="button" ng-click="sendFriendRequestOnPopUp(comment.author.username); comment.author.hasPendingRequest=true" value="Invite" ng-if="comment.author.isFriend==false && comment.author.hasPendingRequest==false" />
                                             <input type="button" value="Pending" ng-if="comment.author.hasPendingRequest==true" disabled="disabled" />
                                             <input type="button" value="Friend" ng-if="comment.author.isFriend==true" disabled="disabled" />
                                         </div>
