On click of friends' friend image goes to person wall On hover - cursor pointer

--- a/SocialNetwork/SocialNetwork/styles/wall-style.css
+++ b/SocialNetwork/SocialNetwork/styles/wall-style.css
@@ -113,6 +113,10 @@
             position: relative;
         }
 
+            #friends-preview ul li:hover {
+                cursor: pointer;
+            }
+
             #friends-preview ul li .friend-image {
                 height: 120px;
                 padding: 0;
